<resources>
    <string name="app_name">Project2</string>
    <string name="welcome">Welcome to Checkers</string>
    <string name="startButton">Start</string>
    <string name="player1text">Player 1</string>
    <string name="nameHint">Name</string>
    <string name="userHint">Username</string>
    <string name="userConfirm">Confirm Username</string>
    <string name="loginBtn">Login as existing user</string>
    <string name="login">Login</string>
    <string name="createBtn">Create a new user</string>
    <string name="new_user">New User</string>
    <string name="passwordHint">Password</string>
    <string name="passConfirm">Confirm Password</string>
    <string name="player2text">Player 2</string>
    <string name="restart">Restart</string>
    <string name="piece_desc">checker pieces design</string>
    <string name="resignButton">Resign</string>
    <string name="doneButton">Done</string>
    <string name="endMessage">Message</string>
    <string name="dialogue">Instructions</string>
    <string name="failed_to_save">Failed to save user to the server</string>
    <string name="name_prompt">User:</string>
    <string name="password_prompt">Pw:</string>
    <string name="dummy_message">You made it to the dummy!</string>
    <string name="wait_message">Waiting for Player 2 to join</string>
    <string name="title_activity_dummy">DummyActivity</string>
    <string name="checkbox">Remember</string>
    <string name="board_fail">Failed to load board</string>
    <string name="endmessage">Thank you for playing!</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="weak">Weak</string>
    <string name="medium">Medium</string>
    <string name="very_strong">Very Strong</string>
    <string name="strong">Strong</string>
</resources>