<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/unameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/editName"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/editName"
        android:gravity="center"
        android:text="@string/name_prompt" />

    <TextView
        android:id="@+id/pwTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/unameTextView"
        android:layout_alignBottom="@id/editPw"
        android:layout_toStartOf="@id/editPw"
        android:gravity="center"
        android:text="@string/password_prompt" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:autofillHints="@string/userHint"
        android:hint="@string/userHint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editName"
        android:layout_alignParentTop="false"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:autofillHints="@string/passwordHint"
        android:inputType="textPassword" />
</RelativeLayout>