<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CreateLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">

    <TextView
        android:id="@+id/register"
        android:layout_width="191dp"
        android:layout_height="71dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/createBtn"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/userIDC1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:contentDescription="@string/piece_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/king_green" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:contentDescription="@string/piece_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/king_white" />

    <EditText
        android:id="@+id/userIDC1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/userHint"
        android:ems="10"
        android:hint="@string/userHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346" />

    <EditText
        android:id="@+id/passWordC1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/passwordHint"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userIDC1" />

    <EditText
        android:id="@+id/passWordC2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/passwordHint"
        android:ems="10"
        android:hint="@string/passConfirm"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passWordC1" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passWordC2" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:contentDescription="@string/piece_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/spartan_green" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:contentDescription="@string/piece_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/spartan_white" />
</androidx.constraintlayout.widget.ConstraintLayout>